# jlpt-max-deck

./: .gitattributes  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  pages.yml
config/: public-layouts.json  public-release.json  public-runtime-files.txt  public-source-files.txt  public-sources.json
docs/: anki.md  build.md  privacy-and-licensing.md  troubleshooting.md
scripts/: bootstrap-public.ps1  bootstrap-public.sh  build-public.ps1  build-public.sh  prepare-pages-site.py  verify-public-tree.py
site/: 404.html  getting-started.html  index.html  install-anki.html  robots.txt  sitemap.xml
src/: build_public_deck.py  public_apkg_builder.py  public_build_contract.py  public_content.py  public_dongyang_reference.py  public_hashing.py  public_input_contract.py  public_kanji.py  public_kanji_rendering.py  public_layout_cells.py  public_lexical_validation.py  public_materialization.py  public_media.py  public_practice_contract.py  public_release.py  public_ruby.py  public_source_proof.py  public_source_records.py  public_study_rendering.py  public_text_geometry.py  public_text_layouts.py  public_vocabulary_rendering.py
test/: run_tests.py  test_public_build_safety.py  test_public_content.py  test_public_kanji.py  test_public_kanji_rendering.py  test_public_layout_cells.py  test_public_materialization.py  test_public_media.py  test_public_repository.py  test_public_source_proof.py  test_public_tree_contracts.py  test_site.py
(+5 files in other folders)
