[project]
name = "jlpt-max-deck"
version = "1.0.0"
description = "Build the personal-use JLPT MAX deck for Korean learners"
requires-python = ">=3.13,<3.14"
dependencies = [
  "anki==25.9.2",
  "cryptography>=45",
  "pdfplumber>=0.11",
  "pypdf>=6.0",
  "pypdfium2>=5.0",
]

[tool.uv]
package = false
